# raw_pdb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake.toml  cmkr.cmake  raw_pdb.natvis
.github/workflows/: build.yml
examples/: ExampleContributions.cpp  ExampleFunctionSymbols.cpp  ExampleMain.cpp  ExampleMemoryMappedFile.cpp  ExampleMemoryMappedFile.h  ExampleSymbols.cpp  ExampleTimedScope.h  Examples_PCH.cpp  Examples_PCH.h
include/raw_pdb/: PDB_DBITypes.h  PDB_IPITypes.h  PDB_Types.h
include/raw_pdb/Foundation/: PDB_ArrayView.h  PDB_Assert.h  PDB_BitUtil.h  PDB_DisableWarningsPop.h  PDB_DisableWarningsPush.h  PDB_Macros.h  PDB_Platform.h
src/: CMakeLists.txt  PDB.cpp  PDB.h  PDB_ArrayView.h  PDB_Assert.h  PDB_BitUtil.h  PDB_ClientInclude.h  PDB_CoalescedMSFStream.cpp  PDB_CoalescedMSFStream.h  PDB_DBIStream.cpp  PDB_DBIStream.h  PDB_DBITypes.h  PDB_DirectMSFStream.cpp  PDB_DirectMSFStream.h  PDB_DisableWarningsPop.h  PDB_DisableWarningsPush.h  PDB_ErrorCodes.h  PDB_Forward.h  PDB_GlobalSymbolStream.cpp  PDB_GlobalSymbolStream.h  PDB_IPIStream.cpp  PDB_IPIStream.h  PDB_IPITypes.h  PDB_ImageSectionStream.cpp  PDB_ImageSectionStream.h  PDB_InfoStream.cpp  PDB_InfoStream.h  PDB_Log.h  PDB_Memory.h  PDB_ModuleInfoStream.cpp  PDB_ModuleInfoStream.h  PDB_ModuleLineStream.cpp  PDB_ModuleLineStream.h  PDB_ModuleSymbolStream.cpp  PDB_ModuleSymbolStream.h  PDB_Move.h  PDB_NamesStream.cpp  PDB_NamesStream.h  PDB_PCH.cpp  PDB_PCH.h  (+15 more)
src/Examples/: CMakeLists.txt  ExampleContributions.cpp  ExampleFunctionSymbols.cpp  ExampleFunctionVariables.cpp  ExampleIPI.cpp  ExampleLines.cpp  ExampleMain.cpp  ExampleMemoryMappedFile.cpp  ExampleMemoryMappedFile.h  ExamplePDBSize.cpp  ExampleSymbols.cpp  ExampleTimedScope.cpp  ExampleTimedScope.h  ExampleTypeTable.cpp  ExampleTypeTable.h  ExampleTypes.cpp  Examples_PCH.cpp  Examples_PCH.h
src/Foundation/: PDB_ArrayView.h  PDB_Assert.h  PDB_BitOperators.h  PDB_BitUtil.h  PDB_CRT.h  PDB_DisableWarningsPush.h  PDB_Forward.h  PDB_Log.h  PDB_Macros.h  PDB_Move.h  PDB_Platform.h  PDB_PointerUtil.h  PDB_TypeTraits.h  PDB_Warnings.h
